fix collapse

--- a/src/styles/components/collapse/collapse.sass
+++ b/src/styles/components/collapse/collapse.sass
@@ -4,12 +4,18 @@
         max-height: 0
         overflow: hidden
         transition: max-height 400ms ease-out
+        padding: 0 20px 0 20px
+        border-radius: 0 0 5px 5px
+        font-size: 17px
+        line-height: 142.6%
+        color: #ff6060
+        background: #F6F6F6
     & .opened
         max-height: 140px
         transition: max-height 400ms ease-in
-        padding: 20px
+        padding: 0 20px 0 20px
         border-radius: 0 0 5px 5px
-        font-size: 18px
+        font-size: 17px
         line-height: 142.6%
         color: #ff6060
         background: #F6F6F6
@@ -32,4 +38,5 @@
         & .active
             transform: rotate(0.5turn)
             
-    &__text
+    &__text.opened
+        // padding: 20px 0 20px 0
